1497390325 | 54 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_errors_english.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libengine2_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libicui18n_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libicuuc_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libmaterialsystem2_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libnetworksystem_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libpanorama_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libpanorama_text_pango_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libpanoramauiclient_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libparticles_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/librendersystemgl_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/librendersystemvulkan_strings.txt,  M tools/steamvr_environments
https://steamdb.info/patchnotes/1901099/

--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_brazilian.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_brazilian.txt
@@ -2509,7 +2509,7 @@
 "[english]ResetAnchorButtonText"	"Reset Position"
 "ResetAnchorDesc"	"Redefinir a posição do ambiente para corresponder ao espaço rastreado."
 "[english]ResetAnchorDesc"	"This resets your environment to line up with your tracked space."
-"VR_Avatar_Wearable_MopedHelmet001"	"Capacete"
+"VR_Avatar_Wearable_MopedHelmet001"	"Capacete de scooter"
 "[english]VR_Avatar_Wearable_MopedHelmet001"	"Moped Helmet"
 "VR_Avatar_Wearable_MopedHelmet001_Desc"	"Um capacete para pilotos de scooters."
 "[english]VR_Avatar_Wearable_MopedHelmet001_Desc"	"A helmet for a moped rider."
@@ -2523,6 +2523,8 @@
 "[english]VR_Avatar_Wearable_PinHawaiiChell_Desc"	"A hula-dancing Chell pin."
 "VR_Avatar_Wearable_PinHawaiiLab"	"Broche — Aperture Science"
 "[english]VR_Avatar_Wearable_PinHawaiiLab"	"Pin - Aperture Science"
+"VR_Avatar_Wearable_PinHawaiiLab_Desc"	"Um broche temático da Aperture Science do Havaí."
+"[english]VR_Avatar_Wearable_PinHawaiiLab_Desc"	"An Aperture Science themed pin from Hawaii."
 "VR_Map_HawaiiBeach"	"Praia Havaiana"
 "[english]VR_Map_HawaiiBeach"	"Hawai'i Beach"
 "VR_Map_HawaiiBeach_Desc"	"Uma praia havaiana."
@@ -2535,5 +2537,13 @@
 "[english]Quest_Pin_Hawaii_Lab"	"Aperture Science Pin Quest"
 "Quest_Pin_Hawaii_Lab_Desc"	"Encontre um broche da Aperture Science escondido entre as rochas vulcânicas na praia."
 "[english]Quest_Pin_Hawaii_Lab_Desc"	"Find a hidden Aperture Science pin among the lava rocks on the beach."
+"VR_PhysicsProp_AudioshieldShield001"	"Escudo de Audioshield"
+"[english]VR_PhysicsProp_AudioshieldShield001"	"Audio Shield"
+"VR_PhysicsProp_AudioshieldShield001_Desc"	"Escudo de mão do jogo Audioshield."
+"[english]VR_PhysicsProp_AudioshieldShield001_Desc"	"Equip in case of musical bombardment.\n\nUnlocked by owning Audioshield."
+"VR_PhysicsProp_NekoPlushie"	"Brinquedo Neko"
+"[english]VR_PhysicsProp_NekoPlushie"	"Neko Toy"
+"VR_PhysicsProp_NekoPlushie_Desc"	"Miau miau miau miau.\n\nRéplica fiel do item visto em Fantastic Contraption."
+"[english]VR_PhysicsProp_NekoPlushie_Desc"	"Meow meow meow meow.\n\nUnlocked by owning Fantastic Contraption."
 }
 }
