--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_czech.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_czech.txt
@@ -2560,5 +2560,33 @@
 "[english]Quest_Pin_Hawaii_Lab"	"Aperture Science Pin Quest"
 "Quest_Pin_Hawaii_Lab_Desc"	"Odznak společnosti Aperture Science naleznete ukrytý mezi lávovými kameny na pláži."
 "[english]Quest_Pin_Hawaii_Lab_Desc"	"Find a hidden Aperture Science pin among the lava rocks on the beach."
+"VR_PhysicsProp_AudioshieldShield001"	"Audioštít"
+"[english]VR_PhysicsProp_AudioshieldShield001"	"Audio Shield"
+"VR_PhysicsProp_AudioshieldShield001_Desc"	"Pro chvíle, kdy vás hudba bombarduje ze všech stran.\n\nDárek za vlastnění hry Audioshield."
+"[english]VR_PhysicsProp_AudioshieldShield001_Desc"	"Equip in case of musical bombardment.\n\nUnlocked by owning Audioshield."
+"VR_PhysicsProp_NekoPlushie"	"Plyšová Neko"
+"[english]VR_PhysicsProp_NekoPlushie"	"Neko Toy"
+"VR_PhysicsProp_NekoPlushie_Desc"	"Mňau.\n\nDárek za vlastnění hry Fantastic Contraption."
+"[english]VR_PhysicsProp_NekoPlushie_Desc"	"Meow meow meow meow.\n\nUnlocked by owning Fantastic Contraption."
+"VR_PhysicsProp_GauntletTrophy"	"Rukavice"
+"[english]VR_PhysicsProp_GauntletTrophy"	"The Gauntlet"
+"VR_PhysicsProp_GauntletTrophy_Desc"	"Rukavice jako památka na úžasná dobrodružství ve vesmíru? Proč ne.\n\nDárek za vlastnění hry The Gallery - Call of the Starseed."
+"[english]VR_PhysicsProp_GauntletTrophy_Desc"	"Holy smokes, Al, the machine got us both! At least we have this radical souvenir space hand!\n\nUnlocked by owning The Gallery - Call of the Starseed."
+"VR_PhysicsProp_ASAmmoBox"	"Krabička s náboji"
+"[english]VR_PhysicsProp_ASAmmoBox"	"Ammo Box"
+"VR_PhysicsProp_ASAmmoBox_Desc"	"Také přezdívaná „krabička poslední záchrany“.\n\nDárek za vlastnění hry Arizona Sunshine."
+"[english]VR_PhysicsProp_ASAmmoBox_Desc"	"Ammo Box, Yeah baby! Sweet, sweet ammo! \n\nUnlocked by owning Arizona Sunshine."
+"VR_PhysicsProp_AirmechStrikerToy"	"Beta Striker"
+"[english]VR_PhysicsProp_AirmechStrikerToy"	"Beta Striker"
+"VR_PhysicsProp_AirmechStrikerToy_Desc"	"Druhá generace Strikera třídy AirMech. Tento model byl věnován stálým odběratelům za jejich nákupy.\n\nDárek za vlastnění hry AirMech."
+"[english]VR_PhysicsProp_AirmechStrikerToy_Desc"	"Second generation Striker class AirMech. This scale model was gifted to government agencies who placed very large orders.\n\nUnlocked by owning AirMech Command."
+"VR_PhysicsProp_HJGuntherToy"	"Gunther"
+"[english]VR_PhysicsProp_HJGuntherToy"	"Gunther"
+"VR_PhysicsProp_HJGuntherToy_Desc"	"Gunther se konečně rozhoupal ke změně kariéry. Nově podle sebe nechává dělat hračky!\n\nDárek za vlastnění hry Hover Junkers."
+"[english]VR_PhysicsProp_HJGuntherToy_Desc"	"Branching out from his diner business, Gunther has entered the world of merchandising. Own your very own Gunther figure today!\n\nUnlocked by owning Hover Junkers."
+"VR_Avatar_SpacePirateHelmet"	"Helma vesmírného piráta"
+"[english]VR_Avatar_SpacePirateHelmet"	"Space Pirate Helmet"
+"VR_Avatar_SpacePirateHelmet_Desc"	"Helma plná neurostimulantů pro zlepšení zraku, slechu a možnost zpomalit čas. Hodí se jak začínajícím bukanýrům, tak ostříleným pirátům.\n\nDárek za vlastnění hry Space Pirate Trainer."
+"[english]VR_Avatar_SpacePirateHelmet_Desc"	"Filled with neuro-stimulators to enhance vision, sound and the ability to slow down time, this helmet is the perfect kit for any top Space Pirate, even those in training.\n\nUnlocked by owning Space Pirate Trainer."
 }
 }
