--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_danish.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_danish.txt
@@ -1961,6 +1961,8 @@
 "[english]BigBubble"	"BIG"
 "VR_Furniture_ComputerDesk001"	"Computerskrivebord"
 "[english]VR_Furniture_ComputerDesk001"	"Computer Desk"
+"VR_Furniture_ComputerDesk001_Desc"	"Et skrivebord."
+"[english]VR_Furniture_ComputerDesk001_Desc"	"A computer desk."
 "VR_Furniture_Monitor001"	"Skærm"
 "[english]VR_Furniture_Monitor001"	"Monitor"
 "VR_Furniture_Monitor001_Desc"	"En skærm."
@@ -2001,12 +2003,18 @@
 "[english]PlayerBillboard_Click"	"Click for Options"
 "PrivateTutorialLabel"	"Private rum"
 "[english]PrivateTutorialLabel"	"Private Rooms"
+"SocialTutorialLabel"	"Social takt og tone"
+"[english]SocialTutorialLabel"	"Social Etiquette"
 "MultiToolTutorialLabel"	"Brug af multiværktøjet"
 "[english]MultiToolTutorialLabel"	"Using the Multi-Tool"
 "SavedTutorialLabel"	"Gemte miljøer"
 "[english]SavedTutorialLabel"	"Saved Environments"
 "TutorialPrivate_Title"	"Private rum"
 "[english]TutorialPrivate_Title"	"Private Rooms"
+"TutorialPrivate_Bottom_Desc"	"Som standard, starter du i dit hjemmemiljø i et privat rum."
+"[english]TutorialPrivate_Bottom_Desc"	"By default, you start out in your home environment in a Private Room."
+"TutorialSocial_Title"	"Social takt og tone"
+"[english]TutorialSocial_Title"	"Social Etiquette"
 "TutorialMultiTool_Title"	"Brug af multiværktøjet"
 "[english]TutorialMultiTool_Title"	"Using the Multi-Tool"
 "TutorialMultiTool_Tile1_Desc"	"Multiværktøjet lader dig fryse, tø, klone og slette rekvisitter i SteamVR-miljøer."
@@ -2019,6 +2027,12 @@
 "[english]TutorialSaved_Tile3_Desc"	"Load Saved Environments from the Environments panel - look for the Saved tab."
 "TutorialSaved_Bottom_Desc"	"Alle rekvisitter og tegninger gemmes, når et miljø gemmes."
 "[english]TutorialSaved_Bottom_Desc"	"Props and drawings are all saved when saving an environment."
+"VR_Avatar_Wearable_PartyHat001"	"Festhat"
+"[english]VR_Avatar_Wearable_PartyHat001"	"Party Hat"
+"VR_Avatar_Wearable_PartyHat001_Desc"	"Tillykke med fødselsdagen!"
+"[english]VR_Avatar_Wearable_PartyHat001_Desc"	"Happy Birthday!."
+"VR_Avatar_Wearable_VRHMD001"	"VR-HMD"
+"[english]VR_Avatar_Wearable_VRHMD001"	"VR HMD"
 "VR_Avatar_Wearable_VRHMD001_Desc"	"Et VR-headset."
 "[english]VR_Avatar_Wearable_VRHMD001_Desc"	"A VR headset."
 "ItemDetail_Type_SteamVRBackground"	"SteamVR-tilpasset baggrund"
@@ -2029,12 +2043,20 @@
 "[english]ItemDetail_Type_SteamVRController"	"SteamVR Custom Controller"
 "EnvironmentsTag"	"Miljøer"
 "[english]EnvironmentsTag"	"Environments"
+"LegacyTag"	"Oprindelig"
+"[english]LegacyTag"	"Legacy"
 "SavedTag"	"Gemte"
 "[english]SavedTag"	"Saved"
 "BackgroundsTag"	"Baggrunde"
 "[english]BackgroundsTag"	"Backgrounds"
+"VR_Furniture_Couch001"	"Sofa"
+"[english]VR_Furniture_Couch001"	"Couch"
+"VR_Furniture_Couch001_Desc"	"En divan."
+"[english]VR_Furniture_Couch001_Desc"	"A couch."
 "VR_Furniture_Pillow001"	"Pude"
 "[english]VR_Furniture_Pillow001"	"Pillow"
+"VR_Furniture_Pillow001_Desc"	"En pude til divanen eller sofaen."
+"[english]VR_Furniture_Pillow001_Desc"	"A pillow for the couch or sofa."
 "VR_Furniture_CoffeeTable001"	"Kaffebord"
 "[english]VR_Furniture_CoffeeTable001"	"Coffee Table"
 "VR_Furniture_CoffeeTable001_Desc"	"Et kaffebord."
@@ -2111,6 +2133,8 @@
 "[english]ItemDetail_EquipTool"	"Equip"
 "RecentApps_Title"	"NYLIGT LANCERET"
 "[english]RecentApps_Title"	"RECENTLY LAUNCHED"
+"RecentApps_Footer"	"For alle applikationer, tryk på System-knappen."
+"[english]RecentApps_Footer"	"For all applications, press the System button."
 "VR_Map_SteamVRHome"	"Summit Pavillion"
 "[english]VR_Map_SteamVRHome"	"Summit Pavilion"
 "VR_Map_SteamVRHome_Desc"	"En pavillion i bjergene."
@@ -2427,5 +2451,25 @@
 "[english]Friends_NickName"	"({s:nickname})"
 "WelcomePanel_UpdateText"	"{s:workshop_title}"
 "[english]WelcomePanel_UpdateText"	"{s:workshop_title}"
+"ResetButtonText"	"Nulstil position"
+"[english]ResetButtonText"	"Reset Position"
+"BrowseWorkshop_Visit"	"Besøg"
+"[english]BrowseWorkshop_Visit"	"Visit"
+"ResetAnchorButtonText"	"Nulstil position"
+"[english]ResetAnchorButtonText"	"Reset Position"
+"VR_Furniture_WallClockAnalog"	"Vægur"
+"[english]VR_Furniture_WallClockAnalog"	"Wall Clock"
+"VR_Furniture_WallClockAnalog_Desc"	"Et analogt vægur."
+"[english]VR_Furniture_WallClockAnalog_Desc"	"An analog wall clock."
+"VR_Map_HawaiiBeach"	"Hawaii Beach"
+"[english]VR_Map_HawaiiBeach"	"Hawai'i Beach"
+"VR_PhysicsProp_AudioshieldShield001"	"Lydskjold"
+"[english]VR_PhysicsProp_AudioshieldShield001"	"Audio Shield"
+"VR_PhysicsProp_ASAmmoBox"	"Ammunitionskasse"
+"[english]VR_PhysicsProp_ASAmmoBox"	"Ammo Box"
+"VR_PropTool_meeseeks_ball"	"Mr. Meeseeks-bold"
+"[english]VR_PropTool_meeseeks_ball"	"Mr. Meeseeks Ball"
+"VR_PropTool_meeseeks_ball_Desc"	"HEJ JEG ER MR. MEESEEKS! SE PÅ MIG!\n\nOplåst ved at eje Rick and Morty: Virtual Rickality"
+"[english]VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nUnlocked by owning Rick and Morty: Virtual Rickality"
 }
 }
