--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_french.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_french.txt
@@ -259,7 +259,7 @@
 "[english]TutorialPage1_Tile1_Desc"	"To teleport, press down and hold the trackpad button."
 "TutorialPage1_Tile2_Desc"	"Vous verrez alors un arc pointant vers un cercle vert sur le sol."
 "[english]TutorialPage1_Tile2_Desc"	"You will see an arc that ends with a green circle on the ground."
-"TutorialPage1_Tile3_Desc"	"Relâchez le bouton du trackpad pour vous téléporter au cercle vert."
+"TutorialPage1_Tile3_Desc"	"Relâchez le bouton du trackpad pour vous téléporter dans le cercle vert."
 "[english]TutorialPage1_Tile3_Desc"	"Release the trackpad button to teleport to the green circle."
 "TutorialPage_Next"	"Suivant"
 "[english]TutorialPage_Next"	"Next"
@@ -656,7 +656,7 @@ La montagne en arrière-plan et la bordure du cratère sont placés approximativ
 "[english]TutorialWelcome_Title"	"Welcome!"
 "TutorialWelcome_Tile1_Desc"	"Bienvenue dans SteamVR ! Voici votre espace."
 "[english]TutorialWelcome_Tile1_Desc"	"Welcome to SteamVR Home! This is your home space."
-"TutorialWelcome_Tile2_Desc"	"L'acceuil est un espace social, interactif et personnalisable."
+"TutorialWelcome_Tile2_Desc"	"L’accueil est un espace social, interactif et personnalisable."
 "[english]TutorialWelcome_Tile2_Desc"	"Your home space is interactive, customizable, and social."
 "TutorialWelcome_Tile3_Desc"	"Pour ouvrir et fermer le menu principal, appuyez sur le bouton Menu de votre contrôleur."
 "[english]TutorialWelcome_Tile3_Desc"	"To open and close the main menu, use the Menu button on your controller."
@@ -686,7 +686,7 @@ La montagne en arrière-plan et la bordure du cratère sont placés approximativ
 "[english]TutorialTeleport_Tile1_Desc"	"To teleport, press down and hold the trackpad button."
 "TutorialTeleport_Tile2_Desc"	"Vous verrez alors un arc pointant vers un cercle vert sur le sol."
 "[english]TutorialTeleport_Tile2_Desc"	"You will see an arc that ends with a green circle on the ground."
-"TutorialTeleport_Tile3_Desc"	"Relâchez le bouton du trackpad pour vous téléporter au cercle vert."
+"TutorialTeleport_Tile3_Desc"	"Relâchez le bouton du trackpad pour vous téléporter dans le cercle vert."
 "[english]TutorialTeleport_Tile3_Desc"	"Release the trackpad button to teleport to the green circle."
 "TutorialTeleport_Bottom_Desc"	"L'arc de téléportation deviendra rouge si vous ne pouvez pas vous téléporter à l'endroit sélectionné."
 "[english]TutorialTeleport_Bottom_Desc"	"The teleport arc will turn red if you cannot teleport to that location."
@@ -1616,7 +1616,7 @@ La montagne en arrière-plan et la bordure du cratère sont placés approximativ
 "[english]DownloadingLabel"	"Downloading..."
 "ConfirmationMessage"	"Si vous fermez cette salle, tous les joueurs y participant seront renvoyés vers leur environnement d'accueil."
 "[english]ConfirmationMessage"	"Closing this room will send all players in this room to their home environment."
-"ConfirmationLeaveLobbyMessage"	"Si vous quittez cette salle, tous les joueurs y participant seront renvoyés vers leur environnement d'acceuil."
+"ConfirmationLeaveLobbyMessage"	"Si vous quittez cette salle, tous les joueurs y participant seront renvoyés vers leur environnement d’accueil."
 "[english]ConfirmationLeaveLobbyMessage"	"Leaving will send all players in this room to their home environment."
 "ConfirmationGoHomeMessage"	"Si vous retournez à l’accueil, tous les joueurs se trouvant dans cette salle seront renvoyés vers leur Environnement d'origine."
 "[english]ConfirmationGoHomeMessage"	"Going home will send all players in this room to their home environment."
@@ -1908,9 +1908,9 @@ La montagne en arrière-plan et la bordure du cratère sont placés approximativ
 "[english]VR_Furniture_Stand001"	"TV Stand"
 "VR_Furniture_Stand001_Desc"	"Un meuble TV."
 "[english]VR_Furniture_Stand001_Desc"	"A stand for your entertainment system."
-"VR_Furniture_HousePlant001"	"Plante d'intérieur - Bambou"
+"VR_Furniture_HousePlant001"	"Plante d'intérieur"
 "[english]VR_Furniture_HousePlant001"	"House Plant"
-"VR_Furniture_HousePlant001_Desc"	"Un bambou d'intérieur."
+"VR_Furniture_HousePlant001_Desc"	"Une plante d'intérieur."
 "[english]VR_Furniture_HousePlant001_Desc"	"A house plant."
 "Dashboard_Destinations_2"	"ENVIRONNEMENTS"
 "[english]Dashboard_Destinations_2"	"ENVIRONMENTS"
@@ -2560,5 +2560,41 @@ La montagne en arrière-plan et la bordure du cratère sont placés approximativ
 "[english]Quest_Pin_Hawaii_Lab"	"Aperture Science Pin Quest"
 "Quest_Pin_Hawaii_Lab_Desc"	"Trouvez le pin's d'Aperture Science. Celui-ci se trouve près des roches volcaniques, sur la plage."
 "[english]Quest_Pin_Hawaii_Lab_Desc"	"Find a hidden Aperture Science pin among the lava rocks on the beach."
+"VR_PhysicsProp_AudioshieldShield001"	"Bouclier d'Audioshield"
+"[english]VR_PhysicsProp_AudioshieldShield001"	"Audio Shield"
+"VR_PhysicsProp_AudioshieldShield001_Desc"	"À utiliser en cas de bombardements musicaux.\n\nDébloqué pour avoir acquis Audioshield."
+"[english]VR_PhysicsProp_AudioshieldShield001_Desc"	"Equip in case of musical bombardment.\n\nUnlocked by owning Audioshield."
+"VR_PhysicsProp_NekoPlushie"	"Peluche Neko"
+"[english]VR_PhysicsProp_NekoPlushie"	"Neko Toy"
+"VR_PhysicsProp_NekoPlushie_Desc"	"Miaou, miaou, miaou, ron-ron.\n\nDébloqué pour avoir acquis Fantastic Contraption."
+"[english]VR_PhysicsProp_NekoPlushie_Desc"	"Meow meow meow meow.\n\nUnlocked by owning Fantastic Contraption."
+"VR_PhysicsProp_GauntletTrophy"	"Le gantelet"
+"[english]VR_PhysicsProp_GauntletTrophy"	"The Gauntlet"
+"VR_PhysicsProp_GauntletTrophy_Desc"	"Sacrebleu, la machine nous a coincés tous les deux, Al ! Au moins, nous avons ce gant de l'espace en souvenir...\n\nDébloqué pour avoir acquis The Gallery - Call of the Starseed."
+"[english]VR_PhysicsProp_GauntletTrophy_Desc"	"Holy smokes, Al, the machine got us both! At least we have this radical souvenir space hand!\n\nUnlocked by owning The Gallery - Call of the Starseed."
+"VR_PhysicsProp_ASAmmoBox"	"Boîte de munitions"
+"[english]VR_PhysicsProp_ASAmmoBox"	"Ammo Box"
+"VR_PhysicsProp_ASAmmoBox_Desc"	"Génial, une boîte de munitions ! Amenez-vous, les zombies.\n\nDébloquée pour avoir acquis Arizona Sunshine."
+"[english]VR_PhysicsProp_ASAmmoBox_Desc"	"Ammo Box, Yeah baby! Sweet, sweet ammo! \n\nUnlocked by owning Arizona Sunshine."
+"VR_PhysicsProp_AirmechStrikerToy"	"Beta Striker"
+"[english]VR_PhysicsProp_AirmechStrikerToy"	"Beta Striker"
+"VR_PhysicsProp_AirmechStrikerToy_Desc"	"Un Striker de seconde génération. Ce modèle réduit a été offert aux agences gouvernementales qui ont passées de grosses commandes.\n\nDébloqué pour avoir acquis AirMech Command."
+"[english]VR_PhysicsProp_AirmechStrikerToy_Desc"	"Second generation Striker class AirMech. This scale model was gifted to government agencies who placed very large orders.\n\nUnlocked by owning AirMech Command."
+"VR_PhysicsProp_HJGuntherToy"	"Gunther"
+"[english]VR_PhysicsProp_HJGuntherToy"	"Gunther"
+"VR_PhysicsProp_HJGuntherToy_Desc"	"Ayant décidé de diversifier ses activités, Gunther est entré dans le monde du merchandising. Obtenez votre propre figurine de Gunther dès aujourd'hui !\n\nDébloqué pour avoir acquis Hover Junkers."
+"[english]VR_PhysicsProp_HJGuntherToy_Desc"	"Branching out from his diner business, Gunther has entered the world of merchandising. Own your very own Gunther figure today!\n\nUnlocked by owning Hover Junkers."
+"VR_Avatar_SpacePirateHelmet"	"Casque de pirate de l'espace"
+"[english]VR_Avatar_SpacePirateHelmet"	"Space Pirate Helmet"
+"VR_Avatar_SpacePirateHelmet_Desc"	"Rempli de neurostimulateurs afin d'améliorer votre vision, votre ouïe et de vous permettre de ralentir le temps, ce casque est essentiel à tout pirate de l'espace et même aux débutants.\n\nDébloqué pour avoir acquis Space Pirate Trainer."
+"[english]VR_Avatar_SpacePirateHelmet_Desc"	"Filled with neuro-stimulators to enhance vision, sound and the ability to slow down time, this helmet is the perfect kit for any top Space Pirate, even those in training.\n\nUnlocked by owning Space Pirate Trainer."
+"VR_PhysicsProp_MiniAtlas"	"Atlas miniature"
+"[english]VR_PhysicsProp_MiniAtlas"	"Miniature Atlas"
+"VR_PhysicsProp_MiniAtlas_Desc"	"Lorsqu'il ne s’agit pas d’être l’objet d'une tentative de réparation par l'un des sujets de test malchanceux de GLaDOS, ce parfait produit des laboratoires d'Aperture peut maintenant subir l'humiliation d'être utilisé comme bibelot.\n\nDébloqué en jouant à The Lab."
+"[english]VR_PhysicsProp_MiniAtlas_Desc"	"When not suffering the indignities of attempted repair by one of GLaDOS's hapless test subjects, this fine robotic product of Aperture Laboratories now can suffer the indignities of being a desk ornament.\n\nUnlocked by playing The Lab."
+"VR_PropTool_meeseeks_ball"	"Balle de Monsieur Larbin"
+"[english]VR_PropTool_meeseeks_ball"	"Mr. Meeseeks Ball"
+"VR_PropTool_meeseeks_ball_Desc"	"SALUT, C'EST MOI ! MONSIEUR LARBIN ! B'SOIN D'UN COUP D'MAIN ?\n\nDébloquée pour avoir possédé Rick and Morty: Virtual Rickality."
+"[english]VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nUnlocked by owning Rick and Morty: Virtual Rickality"
 }
 }
