--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_hungarian.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_hungarian.txt
@@ -2560,5 +2560,41 @@
 "[english]Quest_Pin_Hawaii_Lab"	"Aperture Science Pin Quest"
 "Quest_Pin_Hawaii_Lab_Desc"	"Keresd meg az elrejtett Aperture Science kitűzőt a lávakövek közt a parton."
 "[english]Quest_Pin_Hawaii_Lab_Desc"	"Find a hidden Aperture Science pin among the lava rocks on the beach."
+"VR_PhysicsProp_AudioshieldShield001"	"Hangpajzs"
+"[english]VR_PhysicsProp_AudioshieldShield001"	"Audio Shield"
+"VR_PhysicsProp_AudioshieldShield001_Desc"	"Zenei bombázás esetén felszerelendő.\n\nAz Audioshield beszerzésével oldható fel."
+"[english]VR_PhysicsProp_AudioshieldShield001_Desc"	"Equip in case of musical bombardment.\n\nUnlocked by owning Audioshield."
+"VR_PhysicsProp_NekoPlushie"	"Játék Neko"
+"[english]VR_PhysicsProp_NekoPlushie"	"Neko Toy"
+"VR_PhysicsProp_NekoPlushie_Desc"	"Miau miau miau miau.\n\nA Fantastic Contraption beszerzésével oldható fel."
+"[english]VR_PhysicsProp_NekoPlushie_Desc"	"Meow meow meow meow.\n\nUnlocked by owning Fantastic Contraption."
+"VR_PhysicsProp_GauntletTrophy"	"A páncélkesztyű"
+"[english]VR_PhysicsProp_GauntletTrophy"	"The Gauntlet"
+"VR_PhysicsProp_GauntletTrophy_Desc"	"Szent ég, Al, a gép mindkettőnket elkapott! De legalább itt ez a szokatlan űrkéz szuvenír gyanánt.\n\nA The Gallery - Call of the Starseed beszerzésével oldható fel."
+"[english]VR_PhysicsProp_GauntletTrophy_Desc"	"Holy smokes, Al, the machine got us both! At least we have this radical souvenir space hand!\n\nUnlocked by owning The Gallery - Call of the Starseed."
+"VR_PhysicsProp_ASAmmoBox"	"Lőszeres doboz"
+"[english]VR_PhysicsProp_ASAmmoBox"	"Ammo Box"
+"VR_PhysicsProp_ASAmmoBox_Desc"	"Lőszeres doboz! Jee, bébi! Király, lőszer! \n\nAz Arizona Sunshine beszerzésével oldható fel."
+"[english]VR_PhysicsProp_ASAmmoBox_Desc"	"Ammo Box, Yeah baby! Sweet, sweet ammo! \n\nUnlocked by owning Arizona Sunshine."
+"VR_PhysicsProp_AirmechStrikerToy"	"Beta Striker"
+"[english]VR_PhysicsProp_AirmechStrikerToy"	"Beta Striker"
+"VR_PhysicsProp_AirmechStrikerToy_Desc"	"Második generációs Striker osztályú AirMech. Ezt a méretarányos modellt azon kormányügynökségek kapták ajándékba, amik nagyon nagy rendeléseket adtak le.\n\nAz AirMech Command beszerzésével oldható fel."
+"[english]VR_PhysicsProp_AirmechStrikerToy_Desc"	"Second generation Striker class AirMech. This scale model was gifted to government agencies who placed very large orders.\n\nUnlocked by owning AirMech Command."
+"VR_PhysicsProp_HJGuntherToy"	"Gunther"
+"[english]VR_PhysicsProp_HJGuntherToy"	"Gunther"
+"VR_PhysicsProp_HJGuntherToy_Desc"	"Vendéglátói üzletéből új irányba is nyitva, Gunther belépett az ajándéktárgyak világába. Legyen tiéd még ma egy saját Gunther figura!\n\nA Hover Junkers beszerzésével oldható fel."
+"[english]VR_PhysicsProp_HJGuntherToy_Desc"	"Branching out from his diner business, Gunther has entered the world of merchandising. Own your very own Gunther figure today!\n\nUnlocked by owning Hover Junkers."
+"VR_Avatar_SpacePirateHelmet"	"Űrkalóz sisak"
+"[english]VR_Avatar_SpacePirateHelmet"	"Space Pirate Helmet"
+"VR_Avatar_SpacePirateHelmet_Desc"	"Ez az idegstimulátorokkal töltött sisak, mely felerősíti a látást és hallást, valamint képessé tesz lelassítani az időt, tökéletes felszerelés bármely űrkalóz ásznak, még a kiképzés alatt állóknak is.\n\nA Space Pirate Trainer beszerzésével oldható fel."
+"[english]VR_Avatar_SpacePirateHelmet_Desc"	"Filled with neuro-stimulators to enhance vision, sound and the ability to slow down time, this helmet is the perfect kit for any top Space Pirate, even those in training.\n\nUnlocked by owning Space Pirate Trainer."
+"VR_PhysicsProp_MiniAtlas"	"Miniatűr Atlas"
+"[english]VR_PhysicsProp_MiniAtlas"	"Miniature Atlas"
+"VR_PhysicsProp_MiniAtlas_Desc"	"Amikor nem a GLaDOS egyik szerencsétlen tesztalanya által megkísérelt javítás megaláztatásaitól szenved, az Aperture Laboratórium e remek robotterméke most már az asztaldísz-lét megaláztatásaitól szenvedhet.\n\nA The Lab játszásával oldható fel."
+"[english]VR_PhysicsProp_MiniAtlas_Desc"	"When not suffering the indignities of attempted repair by one of GLaDOS's hapless test subjects, this fine robotic product of Aperture Laboratories now can suffer the indignities of being a desk ornament.\n\nUnlocked by playing The Lab."
+"VR_PropTool_meeseeks_ball"	"Mr. Meeseeks labda"
+"[english]VR_PropTool_meeseeks_ball"	"Mr. Meeseeks Ball"
+"VR_PropTool_meeseeks_ball_Desc"	"HELLÓ! MR. MEESEEKS VAGYOK! IDE SÜSS!\n\nA Rick and Morty: Virtual Rick-ality beszerzésével oldható fel."
+"[english]VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nUnlocked by owning Rick and Morty: Virtual Rickality"
 }
 }
