--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_italian.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_italian.txt
@@ -2037,7 +2037,7 @@
 "[english]TutorialMultiTool_Tile1_Desc"	"The Multi-Tool lets you freeze, thaw, clone, and delete props in SteamVR environments."
 "TutorialMultiTool_Tile2_Desc"	"Gli oggetti congelati sono bloccati nell'ambiente: non potrai interagirvi finché non li scongelerai."
 "[english]TutorialMultiTool_Tile2_Desc"	"When you freeze a prop, it becomes stuck and can’t be interacted with until thawed."
-"TutorialMultiTool_Tile3_Desc"	"Puoi anche eliminare, clonare e congelare i disegni realizzati con l'Aerografo."
+"TutorialMultiTool_Tile3_Desc"	"Clona un oggetto per crearne una copia esatta e usa la funzione \"cancella\" per ripulire."
 "[english]TutorialMultiTool_Tile3_Desc"	"Clone a prop to create exact duplicates, and use the delete function to clean up."
 "TutorialMultiTool_Bottom_Desc"	"Lo strumento multiuso è utile per creare ambienti salvati personalizzati."
 "[english]TutorialMultiTool_Bottom_Desc"	"The Multi-Tool is useful for creating custom saved environments."
@@ -2557,5 +2557,27 @@
 "[english]Quest_Pin_Hawaii_Lab"	"Aperture Science Pin Quest"
 "Quest_Pin_Hawaii_Lab_Desc"	"Trova una spilla nascosta di Aperture Science tra le pietre laviche sulla spiaggia."
 "[english]Quest_Pin_Hawaii_Lab_Desc"	"Find a hidden Aperture Science pin among the lava rocks on the beach."
+"VR_PhysicsProp_AudioshieldShield001"	"Scudo di Audioshield"
+"[english]VR_PhysicsProp_AudioshieldShield001"	"Audio Shield"
+"VR_PhysicsProp_AudioshieldShield001_Desc"	"Da equipaggiare in caso di bombardamento musicale.\n\nSbloccato per aver acquistato Audioshield."
+"[english]VR_PhysicsProp_AudioshieldShield001_Desc"	"Equip in case of musical bombardment.\n\nUnlocked by owning Audioshield."
+"VR_PhysicsProp_NekoPlushie_Desc"	"Miao miao miao miao.\n\nSbloccato per aver acquistato Fantastic Contraption."
+"[english]VR_PhysicsProp_NekoPlushie_Desc"	"Meow meow meow meow.\n\nUnlocked by owning Fantastic Contraption."
+"VR_PhysicsProp_GauntletTrophy"	"Il guanto"
+"[english]VR_PhysicsProp_GauntletTrophy"	"The Gauntlet"
+"VR_PhysicsProp_ASAmmoBox"	"Cassa di munizioni"
+"[english]VR_PhysicsProp_ASAmmoBox"	"Ammo Box"
+"VR_PhysicsProp_AirmechStrikerToy"	"Beta Striker"
+"[english]VR_PhysicsProp_AirmechStrikerToy"	"Beta Striker"
+"VR_PhysicsProp_HJGuntherToy"	"Gunther"
+"[english]VR_PhysicsProp_HJGuntherToy"	"Gunther"
+"VR_Avatar_SpacePirateHelmet"	"Casco da pirata spaziale"
+"[english]VR_Avatar_SpacePirateHelmet"	"Space Pirate Helmet"
+"VR_PhysicsProp_MiniAtlas"	"Miniatura di Atlas"
+"[english]VR_PhysicsProp_MiniAtlas"	"Miniature Atlas"
+"VR_PropTool_meeseeks_ball"	"Palla di Mr. Miguardi"
+"[english]VR_PropTool_meeseeks_ball"	"Mr. Meeseeks Ball"
+"VR_PropTool_meeseeks_ball_Desc"	"CIAO! SONO MR. MIGUARDI! GUARDATEMI!\n\nSbloccato per aver acquistato Rick and Morty: Virtual Rickality"
+"[english]VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nUnlocked by owning Rick and Morty: Virtual Rickality"
 }
 }
