--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_japanese.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_japanese.txt
@@ -439,7 +439,7 @@
 "[english]Friends_InDestinations"	"In SteamVR"
 "Friends_Destination"	"{s:destination_title}訪問中"
 "[english]Friends_Destination"	"Visiting {s:destination_title}"
-"Friends_LobbyInvite"	"招待: {s:name} が {s:destination_title} への参加招待を送っています"
+"Friends_LobbyInvite"	"{s:name} からルームへの招待が届いています。"
 "[english]Friends_LobbyInvite"	"{s:name} has invited you to join their Room."
 "Friends_Invited"	"招待送信完了"
 "[english]Friends_Invited"	"Invitation Sent"
@@ -1449,7 +1449,7 @@
 "[english]Quest_MarsBall_Desc"	"Learn all about Mars to unlock this prop."
 "Quest_Balloonicorn"	"Balloonicorn クエスト"
 "[english]Quest_Balloonicorn"	"Balloonicorn Quest"
-"Quest_Balloonicorn_Desc"	"遊んで勝ち取れ！"
+"Quest_Balloonicorn_Desc"	"ゲームをプレイして勝つともらえます。"
 "[english]Quest_Balloonicorn_Desc"	"Play the game to win this prize."
 "Quest_PortalCake"	"ケーキ クエスト"
 "[english]Quest_PortalCake"	"Cake Quest"
@@ -1473,7 +1473,7 @@
 "[english]Quest_Drumstick_Desc"	"Unlock this prop by interacting with something in Jam Session."
 "Quest_FortificationBlock"	"強化ブロック クエスト"
 "[english]Quest_FortificationBlock"	"Fortification Block Quest"
-"Quest_FortificationBlock_Desc"	"作る前に壊さなきゃいけない時もある。"
+"Quest_FortificationBlock_Desc"	"ゲームをプレイして勝つともらえます。"
 "[english]Quest_FortificationBlock_Desc"	"Play the game to win this prize."
 "Quest_Pumpkin"	"カボチャ クエスト"
 "[english]Quest_Pumpkin"	"Pumpkin Quest"
@@ -1905,9 +1905,9 @@
 "[english]VR_Furniture_Stand001"	"TV Stand"
 "VR_Furniture_Stand001_Desc"	"エンターテインメントシステム用スタンド。"
 "[english]VR_Furniture_Stand001_Desc"	"A stand for your entertainment system."
-"VR_Furniture_HousePlant001"	"観葉植物 - 竹"
+"VR_Furniture_HousePlant001"	"観葉植物"
 "[english]VR_Furniture_HousePlant001"	"House Plant"
-"VR_Furniture_HousePlant001_Desc"	"竹の鉢植え。"
+"VR_Furniture_HousePlant001_Desc"	"観葉植物。"
 "[english]VR_Furniture_HousePlant001_Desc"	"A house plant."
 "Dashboard_Destinations_2"	"環境"
 "[english]Dashboard_Destinations_2"	"ENVIRONMENTS"
@@ -2519,5 +2519,15 @@
 "[english]ResetAnchorButtonText"	"Reset Position"
 "ResetAnchorDesc"	"トラッキングされた空間に合わせて環境をリセットします。"
 "[english]ResetAnchorDesc"	"This resets your environment to line up with your tracked space."
+"VR_Avatar_Wearable_PinHawaiiChell"	"ピン - ハワイアンスタイルの Chell"
+"[english]VR_Avatar_Wearable_PinHawaiiChell"	"Pin - Hawaiian Chell"
+"VR_Map_HawaiiBeach"	"ハワイのビーチ"
+"[english]VR_Map_HawaiiBeach"	"Hawai'i Beach"
+"VR_Map_HawaiiBeach_Desc"	"ハワイ島のビーチ。"
+"[english]VR_Map_HawaiiBeach_Desc"	"A beach on the Island of Hawai'i."
+"Quest_Pin_Hawaii_Chell"	"ハワイアン Chell バッジクエスト"
+"[english]Quest_Pin_Hawaii_Chell"	"Hawaiian Chell Pin Quest"
+"Quest_Pin_Hawaii_Chell_Desc"	"ビーチ近くの丸太の上にフラダンスを踊る Chell のバッジを見つけよう。"
+"[english]Quest_Pin_Hawaii_Chell_Desc"	"Find a hula-dancing Chell pin sitting on a log near the beach."
 }
 }
