--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_polish.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_polish.txt
@@ -1907,9 +1907,9 @@
 "[english]VR_Furniture_Stand001"	"TV Stand"
 "VR_Furniture_Stand001_Desc"	"Stolik na twoje centrum multimedialne."
 "[english]VR_Furniture_Stand001_Desc"	"A stand for your entertainment system."
-"VR_Furniture_HousePlant001"	"Roślina - dracena"
+"VR_Furniture_HousePlant001"	"Roślina doniczkowa"
 "[english]VR_Furniture_HousePlant001"	"House Plant"
-"VR_Furniture_HousePlant001_Desc"	"Dracena."
+"VR_Furniture_HousePlant001_Desc"	"Roślina doniczkowa."
 "[english]VR_Furniture_HousePlant001_Desc"	"A house plant."
 "Dashboard_Destinations_2"	"ŚRODOWISKA"
 "[english]Dashboard_Destinations_2"	"ENVIRONMENTS"
@@ -2538,9 +2538,63 @@
 "[english]VR_Avatar_Wearable_MopedHelmet001_Desc"	"A helmet for a moped rider."
 "VR_Furniture_WallClockAnalog"	"Zegar ścienny"
 "[english]VR_Furniture_WallClockAnalog"	"Wall Clock"
-"VR_Furniture_WallClockAnalog_Desc"	"Zegar ścienny analogowy."
+"VR_Furniture_WallClockAnalog_Desc"	"Analogowy zegar ścienny."
 "[english]VR_Furniture_WallClockAnalog_Desc"	"An analog wall clock."
-"VR_Avatar_Wearable_PinHawaiiChell_Desc"	"Broszka Chell tańczącej Hula."
+"VR_Avatar_Wearable_PinHawaiiChell"	"Broszka - Hawajka Chell"
+"[english]VR_Avatar_Wearable_PinHawaiiChell"	"Pin - Hawaiian Chell"
+"VR_Avatar_Wearable_PinHawaiiChell_Desc"	"Broszka z Chell tańczącą hula."
 "[english]VR_Avatar_Wearable_PinHawaiiChell_Desc"	"A hula-dancing Chell pin."
+"VR_Avatar_Wearable_PinHawaiiLab"	"Broszka - Aperture Science"
+"[english]VR_Avatar_Wearable_PinHawaiiLab"	"Pin - Aperture Science"
+"VR_Avatar_Wearable_PinHawaiiLab_Desc"	"Broszka Aperture Science z Hawajów."
+"[english]VR_Avatar_Wearable_PinHawaiiLab_Desc"	"An Aperture Science themed pin from Hawaii."
+"VR_Map_HawaiiBeach"	"Plaża na wyspie Hawai'i"
+"[english]VR_Map_HawaiiBeach"	"Hawai'i Beach"
+"VR_Map_HawaiiBeach_Desc"	"Plaża na jednej z hawajskich wysp."
+"[english]VR_Map_HawaiiBeach_Desc"	"A beach on the Island of Hawai'i."
+"Quest_Pin_Hawaii_Chell"	"Zadanie: przypinka hawajskiej Chell"
+"[english]Quest_Pin_Hawaii_Chell"	"Hawaiian Chell Pin Quest"
+"Quest_Pin_Hawaii_Chell_Desc"	"Znajdź przypinkę z Chell tańczącą taniec hula leżącą na kłodzie koło plaży."
+"[english]Quest_Pin_Hawaii_Chell_Desc"	"Find a hula-dancing Chell pin sitting on a log near the beach."
+"Quest_Pin_Hawaii_Lab"	"Zadanie: przypinka Aperture Science"
+"[english]Quest_Pin_Hawaii_Lab"	"Aperture Science Pin Quest"
+"Quest_Pin_Hawaii_Lab_Desc"	"Znajdź przypinkę Aperture Science ukrytą pośród kamieni wulkanicznych na plaży."
+"[english]Quest_Pin_Hawaii_Lab_Desc"	"Find a hidden Aperture Science pin among the lava rocks on the beach."
+"VR_PhysicsProp_AudioshieldShield001"	"Tarcza dźwiękowa"
+"[english]VR_PhysicsProp_AudioshieldShield001"	"Audio Shield"
+"VR_PhysicsProp_AudioshieldShield001_Desc"	"Użyj w przypadku bombardowania muzyką.\n\nOdblokowane za posiadanie Audioshield."
+"[english]VR_PhysicsProp_AudioshieldShield001_Desc"	"Equip in case of musical bombardment.\n\nUnlocked by owning Audioshield."
+"VR_PhysicsProp_NekoPlushie"	"Neko Toy"
+"[english]VR_PhysicsProp_NekoPlushie"	"Neko Toy"
+"VR_PhysicsProp_NekoPlushie_Desc"	"Miau miau miau miau.\n\n\n\nOdblokowane za posiadanie Fantastic Contraption."
+"[english]VR_PhysicsProp_NekoPlushie_Desc"	"Meow meow meow meow.\n\nUnlocked by owning Fantastic Contraption."
+"VR_PhysicsProp_GauntletTrophy"	"Rękawica"
+"[english]VR_PhysicsProp_GauntletTrophy"	"The Gauntlet"
+"VR_PhysicsProp_GauntletTrophy_Desc"	"Jasny gwint, Al, maszyna złapała nas obu! Przynajmniej mamy tę wyczesaną kosmiczną rękawicę na pamiątkę!\n\nOdblokowane za posiadanie The Gallery - Call of the Starseed."
+"[english]VR_PhysicsProp_GauntletTrophy_Desc"	"Holy smokes, Al, the machine got us both! At least we have this radical souvenir space hand!\n\nUnlocked by owning The Gallery - Call of the Starseed."
+"VR_PhysicsProp_ASAmmoBox"	"Skrzynka z amunicją"
+"[english]VR_PhysicsProp_ASAmmoBox"	"Ammo Box"
+"VR_PhysicsProp_ASAmmoBox_Desc"	"Skrzynka z amunicją, o tak! Amunicjo, słodkie me kochanie! \n\nOdblokowane za posiadanie Arizona Sunshine."
+"[english]VR_PhysicsProp_ASAmmoBox_Desc"	"Ammo Box, Yeah baby! Sweet, sweet ammo! \n\nUnlocked by owning Arizona Sunshine."
+"VR_PhysicsProp_AirmechStrikerToy"	"Beta Striker"
+"[english]VR_PhysicsProp_AirmechStrikerToy"	"Beta Striker"
+"VR_PhysicsProp_AirmechStrikerToy_Desc"	"AirMech drugiej generacji klasy Striker. Ten model w małej skali był prezentem dla agencji rządowych, które złożyły bardzo duże zamówienia.\n\nOdblokowane za posiadanie AirMech Command."
+"[english]VR_PhysicsProp_AirmechStrikerToy_Desc"	"Second generation Striker class AirMech. This scale model was gifted to government agencies who placed very large orders.\n\nUnlocked by owning AirMech Command."
+"VR_PhysicsProp_HJGuntherToy"	"Gunther"
+"[english]VR_PhysicsProp_HJGuntherToy"	"Gunther"
+"VR_PhysicsProp_HJGuntherToy_Desc"	"Otwierając się na inne gałęzie rynku poza swoją branżę kulinarną, Gunther wszedł w świat gadżetów. Bądź posiadaczem swojej własnej figurki Gunthera już dziś!\n\nOdblokowane za posiadanie Hover Junkers."
+"[english]VR_PhysicsProp_HJGuntherToy_Desc"	"Branching out from his diner business, Gunther has entered the world of merchandising. Own your very own Gunther figure today!\n\nUnlocked by owning Hover Junkers."
+"VR_Avatar_SpacePirateHelmet"	"Hełm kosmicznego pirata"
+"[english]VR_Avatar_SpacePirateHelmet"	"Space Pirate Helmet"
+"VR_Avatar_SpacePirateHelmet_Desc"	"Pełen neurostymulatorów polepszających wzrok, słuch i umożliwiający spowolnienie czasu, ten hełm to idealny zestaw dla każdego kosmicznego pirata, nawet takiego przechodzącego trening.\n\nOdblokowane za posiadanie Space Pirate Trainer."
+"[english]VR_Avatar_SpacePirateHelmet_Desc"	"Filled with neuro-stimulators to enhance vision, sound and the ability to slow down time, this helmet is the perfect kit for any top Space Pirate, even those in training.\n\nUnlocked by owning Space Pirate Trainer."
+"VR_PhysicsProp_MiniAtlas"	"Miniaturowy Atlas"
+"[english]VR_PhysicsProp_MiniAtlas"	"Miniature Atlas"
+"VR_PhysicsProp_MiniAtlas_Desc"	"Gdy nie jest upokarzany podczas próby naprawy przez jednego z nieszczęsnych obiektów testowych GLaDOS, to ten najwspanialszy cud robotycznej techniki jest upokarzany za bycie ozdobą biurkową.\n\nOdblokowanie za zagranie w The Lab."
+"[english]VR_PhysicsProp_MiniAtlas_Desc"	"When not suffering the indignities of attempted repair by one of GLaDOS's hapless test subjects, this fine robotic product of Aperture Laboratories now can suffer the indignities of being a desk ornament.\n\nUnlocked by playing The Lab."
+"VR_PropTool_meeseeks_ball"	"Piłka pana Miszuka"
+"[english]VR_PropTool_meeseeks_ball"	"Mr. Meeseeks Ball"
+"VR_PropTool_meeseeks_ball_Desc"	"JESTEM PAN MISZUK! OTO JA!\n\nOdblokowane za posiadanie Rick and Morty: Virtual Rickality"
+"[english]VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nUnlocked by owning Rick and Morty: Virtual Rickality"
 }
 }
