--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_romanian.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_romanian.txt
@@ -511,6 +511,8 @@
 "[english]SortPlaytime"	"Playtime"
 "SortType"	"Tip"
 "[english]SortType"	"Type"
+"ToolsTag"	"Utilitare"
+"[english]ToolsTag"	"Tools"
 "VR_PhysicsProp_OilDrum"	"Butoi"
 "[english]VR_PhysicsProp_OilDrum"	"Barrel"
 "VR_PhysicsProp_OilDrum_Desc"	"Ce e înăuntru? Apă? Ciocolată? Un alt butoi mai mic? Lumea nu va ști niciodată."
@@ -687,6 +689,8 @@
 "[english]Notification_LobbyInvite"	"{s:player_name} has invited you to their room \nOpen the Social panel in the Menu to respond"
 "Notification_UserUnlockedItem"	"{s:player_name} a deblocat \"{s:item_name}\"!"
 "[english]Notification_UserUnlockedItem"	"{s:player_name} has unlocked \"{s:item_name}\"!"
+"TutorialQuest_Title"	"Misiuni"
+"[english]TutorialQuest_Title"	"Quests"
 "TutorialWelcome_Tile1_Touch_Desc"	"Bine ai venit în SteamVR!"
 "[english]TutorialWelcome_Tile1_Touch_Desc"	"Welcome to SteamVR!"
 "TutorialWelcome_Tile3_Touch_Desc"	"Pentru a deschide sau a închide acest meniu, utilizează butonul B (sau Y) de pe controllerul tău."
@@ -857,11 +861,11 @@
 "[english]VR_Furniture_Sink001"	"Sink"
 "VR_Furniture_Sink001_Desc"	"O chiuvetă pentru bucătărie sau baie."
 "[english]VR_Furniture_Sink001_Desc"	"A sink for the kitchen or bath."
-"VR_Furniture_Fridge001"	"Mobilier - Frigider"
+"VR_Furniture_Fridge001"	"Frigider"
 "[english]VR_Furniture_Fridge001"	"Fridge"
 "VR_Furniture_Fridge001_Desc"	"Un frigider."
 "[english]VR_Furniture_Fridge001_Desc"	"A refrigerator."
-"VR_Furniture_Toilet001"	"Mobilier - Toaletă"
+"VR_Furniture_Toilet001"	"Toaletă"
 "[english]VR_Furniture_Toilet001"	"Toilet"
 "VR_Furniture_Toilet001_Desc"	"O toaletă."
 "[english]VR_Furniture_Toilet001_Desc"	"A toilet."
@@ -899,7 +903,7 @@
 "[english]VR_Furniture_ComputerDesk001"	"Computer Desk"
 "VR_Furniture_ComputerDesk001_Desc"	"Un birou pentru calculator."
 "[english]VR_Furniture_ComputerDesk001_Desc"	"A computer desk."
-"VR_Furniture_Monitor001"	"Mobilier - Monitor"
+"VR_Furniture_Monitor001"	"Monitor"
 "[english]VR_Furniture_Monitor001"	"Monitor"
 "VR_Furniture_Monitor001_Desc"	"Un monitor."
 "[english]VR_Furniture_Monitor001_Desc"	"A monitor."
@@ -907,15 +911,15 @@
 "[english]VR_Furniture_DesktopPC001"	"Desktop PC"
 "VR_Furniture_DesktopPC001_Desc"	"Un calculator."
 "[english]VR_Furniture_DesktopPC001_Desc"	"A desktop PC."
-"VR_Furniture_Keyboard001"	"Mobilier - Tastatură"
+"VR_Furniture_Keyboard001"	"Tastatură"
 "[english]VR_Furniture_Keyboard001"	"Keyboard"
 "VR_Furniture_Keyboard001_Desc"	"O tastatură pentru computer."
 "[english]VR_Furniture_Keyboard001_Desc"	"A computer keyboard."
-"VR_Furniture_Mousepad001"	"Mobilier - Mousepad"
+"VR_Furniture_Mousepad001"	"Mousepad"
 "[english]VR_Furniture_Mousepad001"	"Mousepad"
 "VR_Furniture_Mousepad001_Desc"	"Un mousepad."
 "[english]VR_Furniture_Mousepad001_Desc"	"A mousepad."
-"VR_Furniture_Mouse001"	"Mobilier - Mouse"
+"VR_Furniture_Mouse001"	"Mouse"
 "[english]VR_Furniture_Mouse001"	"Mouse"
 "VR_Furniture_Mouse001_Desc"	"Un mouse de calculator."
 "[english]VR_Furniture_Mouse001_Desc"	"A computer mouse."
@@ -927,7 +931,7 @@
 "[english]VR_Furniture_OfficeStool001"	"Office Stool"
 "VR_Furniture_OfficeStool001_Desc"	"Un scaun de birou."
 "[english]VR_Furniture_OfficeStool001_Desc"	"An office stool."
-"VR_Furniture_CoffeeMug001"	"Mobilier - Cană de cafea"
+"VR_Furniture_CoffeeMug001"	"Cană de cafea"
 "[english]VR_Furniture_CoffeeMug001"	"Coffee Mug"
 "VR_Furniture_CoffeeMug001_Desc"	"O cană de cafea."
 "[english]VR_Furniture_CoffeeMug001_Desc"	"A coffee mug."
