--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_ukrainian.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_ukrainian.txt
@@ -1905,9 +1905,9 @@
 "[english]VR_Furniture_Stand001"	"TV Stand"
 "VR_Furniture_Stand001_Desc"	"Підставка для вашої розважальної системи."
 "[english]VR_Furniture_Stand001_Desc"	"A stand for your entertainment system."
-"VR_Furniture_HousePlant001"	"Домашня рослина (бамбук)"
+"VR_Furniture_HousePlant001"	"Кімнатна рослина"
 "[english]VR_Furniture_HousePlant001"	"House Plant"
-"VR_Furniture_HousePlant001_Desc"	"Домашній бамбук."
+"VR_Furniture_HousePlant001_Desc"	"Кімнатна рослина."
 "[english]VR_Furniture_HousePlant001_Desc"	"A house plant."
 "Dashboard_Destinations_2"	"СЕРЕДОВИЩА"
 "[english]Dashboard_Destinations_2"	"ENVIRONMENTS"
@@ -2533,5 +2533,29 @@
 "[english]VR_Avatar_Wearable_MopedHelmet001"	"Moped Helmet"
 "VR_Avatar_Wearable_MopedHelmet001_Desc"	"Шолом для їздця на мопеді."
 "[english]VR_Avatar_Wearable_MopedHelmet001_Desc"	"A helmet for a moped rider."
+"VR_Furniture_WallClockAnalog"	"Настінний годинник"
+"[english]VR_Furniture_WallClockAnalog"	"Wall Clock"
+"VR_Furniture_WallClockAnalog_Desc"	"Аналоговий настінний годинник."
+"[english]VR_Furniture_WallClockAnalog_Desc"	"An analog wall clock."
+"VR_Avatar_Wearable_PinHawaiiChell"	"Значок — Чел  із Гаваїв"
+"[english]VR_Avatar_Wearable_PinHawaiiChell"	"Pin - Hawaiian Chell"
+"VR_Avatar_Wearable_PinHawaiiChell_Desc"	"Значок із зображенням танцюючої хулу Чел."
+"[english]VR_Avatar_Wearable_PinHawaiiChell_Desc"	"A hula-dancing Chell pin."
+"VR_Avatar_Wearable_PinHawaiiLab"	"Значок — лабораторія Aperture"
+"[english]VR_Avatar_Wearable_PinHawaiiLab"	"Pin - Aperture Science"
+"VR_Avatar_Wearable_PinHawaiiLab_Desc"	"Значок лабораторії Aperture із Гаваїв."
+"[english]VR_Avatar_Wearable_PinHawaiiLab_Desc"	"An Aperture Science themed pin from Hawaii."
+"VR_Map_HawaiiBeach"	"Пляж на Гаваях"
+"[english]VR_Map_HawaiiBeach"	"Hawai'i Beach"
+"VR_Map_HawaiiBeach_Desc"	"Пляж на Гаваях."
+"[english]VR_Map_HawaiiBeach_Desc"	"A beach on the Island of Hawai'i."
+"Quest_Pin_Hawaii_Chell"	"Квест «Значок Чел із Гаваїв»"
+"[english]Quest_Pin_Hawaii_Chell"	"Hawaiian Chell Pin Quest"
+"Quest_Pin_Hawaii_Chell_Desc"	"Знайдіть поблизу пляжу значок Чел у наряді танцівниці хули, яка сидить на колоді."
+"[english]Quest_Pin_Hawaii_Chell_Desc"	"Find a hula-dancing Chell pin sitting on a log near the beach."
+"Quest_Pin_Hawaii_Lab"	"Квест «Значок лабораторії Aperture»"
+"[english]Quest_Pin_Hawaii_Lab"	"Aperture Science Pin Quest"
+"Quest_Pin_Hawaii_Lab_Desc"	"Знайдіть прихований значок лабораторії Aperture серед вулканічного каміння на пляжі."
+"[english]Quest_Pin_Hawaii_Lab_Desc"	"Find a hidden Aperture Science pin among the lava rocks on the beach."
 }
 }
